# vet

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  LICENSE.md  README.md  action.yml  architecture.dot  install-skill.sh  models.json  pyproject.toml  recording.ascii  recording.cast  test_pkgbuild.sh  vet.toml
.github/workflows/: publish-brew.yml  publish-github-release.yml  publish-to-pypi.yml  test-brew.yml  test-pkgbuild.yml  test.yml  vet-agentic.yml  vet.yml
.opencode/plans/: add-opencode-agent-harness.md
.vet/: configs.toml  models.json
action/: run.py  run.sh
benchmarks/: bench_context_pipeline.py  results-tier1.json  results-tier2.json  run_benchmarks.sh
dev/: Containerfile  Dockerfile  README.md  build.sh  common.sh  run.sh  super_vet.sh  vet-claude.sh  vet.sh
examples/custom_guides/: insecure_code.md  logic_error.md
imbue_core/: pyproject.toml
imbue_core/imbue_core/: async_monkey_patches.py  async_monkey_patches_test.py  async_utils.py  bytes_utils.py  caching.py  cattrs_serialization.py  clean_tasks.py  common.py  conftest.py  constants.py  context_managers.py  data_types.py  error_utils.py  errors.py  event_utils.py  fixed_traceback.py  frozen_utils.py  function_utils.py  git.py  ids.py  issues.py  itertools.py  llm_testing_utils.py  log_utils.py  nested_evolver.py  pydantic_serialization.py  pydantic_utils.py  repo_state.py  retry_utils.py  s3_uploader.py  secrets_utils.py  section.py  sentry_loguru_handler.py  serialization.py  simple_git.py  subprocess_utils.py  suggestions.py  test_repo_utils.py  test_utils.py  testing_utils.py  (+2 more)
imbue_core/imbue_core/agents/: configs.py
imbue_core/imbue_core/agents/agent_api/: api.py  cache_utils.py  client.py  data_types.py  errors.py  interaction.py  transport.py  union_types.py
imbue_core/imbue_core/agents/agent_api/claude/: client.py  data_types.py  message_parser.py
imbue_core/imbue_core/agents/agent_api/codex/: client.py  data_types.py  message_parser.py
imbue_core/imbue_core/agents/data_types/: ids.py
imbue_core/imbue_core/agents/llm_apis/: anthropic_api.py  anthropic_data_types.py  api_utils.py  build_apis.py  common.py  data_types.py  errors.py  gemini_api.py  groq_api.py  language_model_api.py  llm_testing_utils.py  mock_api.py  models.py  openai_api.py  openai_compatible_api.py  openai_data_types.py  stream.py  together_api.py  union_data_types.py
imbue_core/imbue_core/agents/primitives/: errors.py  resource_limits.py
imbue_core/imbue_core/computing_environment/: computing_environment.py  data_types.py
imbue_core/imbue_core/imbue_cli/: action.py  scout_data_types.py  scout_message_types.py
imbue_core/imbue_core/processes/: data_types.py  errors.py  local_process.py
imbue_core/imbue_core/progress_tracking/: progress_models.py  progress_tracking.py
imbue_core/imbue_core/sculptor/: __init__.py  telemetry.py  telemetry_constants.py  telemetry_utils.py  user_config.py
imbue_core/imbue_core/sculptor/state/: chat_state.py  claude_state.py  mcp_constants.py  messages.py
imbue_tools/: README.md  pyproject.toml
imbue_tools/imbue_tools/: conftest.py
imbue_tools/imbue_tools/capabilities_data_logging/: common.py  data_types.py
imbue_tools/imbue_tools/get_conversation_history/: get_conversation_history.py  input_data_types.py
imbue_tools/imbue_tools/llm_output_parsing/: parse_model_json_response.py
imbue_tools/imbue_tools/repo_utils/: context_prefix.py  context_retrieval.py  context_utils.py  data_types.py  diff_utils.py  errors.py  file_system.py  file_system_utils.py  find_relative_to.py  project_context.py  python_imports.py  stubify_file.py  subrepo_formatting.py
imbue_tools/imbue_tools/types/: imbue_verify_config.py  vet_config.py
imbue_tools/imbue_tools/util_prompts/: goal_from_conversation.py
imbue_verify/: api.py  conftest.py  formatters.py  repo_utils.py  repo_utils_test.py  telemetry.py  telemetry_test.py
imbue_verify/__snapshots__/: repo_utils_test.ambr
imbue_verify/cli/: main.py  models.py  models_test.py
imbue_verify/issue_identifiers/: agentic_issue_collation.py  base.py  common.py  common_test.py  identification_guides.py  issue_deduplication.py  issue_evaluation.py  registry.py  test_prompt_lengths.py  utils.py  utils_test.py
pkg/: test_pkgbuild.sh
pkg/arch/: PKGBUILD  test.sh  verify-everything.install
pkg/brew/: test.sh  verify-everything.rb
registry/: CONTRIBUTING.md  models.json
skills/super_vet/: SKILL.md
skills/vet/: SKILL.md
skills/vet/scripts/: utils.py  (+4 more)
vet/: __init__.py  __main__.py  api.py  conftest.py  errors.py  formatters.py  formatters_test.py  formatting_test.py  git.py  repo_utils.py  repo_utils_test.py  truncation.py  truncation_test.py
vet-history/: README.md  pyproject.toml
vet-history/tests/: conftest.py  test_claude_code.py  test_cli.py  test_codex.py  test_discovery.py  test_opencode.py
vet-history/vet_history/: __init__.py  __main__.py  cli.py  types.py
vet-history/vet_history/loaders/: __init__.py  base.py  claude_code.py  codex.py  opencode.py
vet-history/vet_history/utils/: __init__.py  discovery.py
vet/__snapshots__/: formatters_test.ambr
vet/cli/: main.py  main_test.py  models.py  models_test.py  post_review.py  post_review_test.py  startup_time_test.py
vet/imbue_core/: async_monkey_patches.py  caching.py  cattrs_serialization.py  data_types.py  errors.py  frozen_utils.py  itertools.py  nested_evolver.py  pydantic_serialization.py  pydantic_utils.py  secrets_utils.py  serialization.py  test_repo_utils.py
vet/imbue_tools/: LICENSE
vet/issue_identifiers/: agentic_issue_collation.py  base.py  common.py  common_test.py  custom_guides.py  custom_guides_integration_test.py  custom_guides_merge_test.py  custom_guides_test.py  identification_guides.py  identification_guides_test.py  issue_deduplication.py  issue_evaluation.py  registry.py  test_prompt_lengths.py  utils_test.py
vet/vet_types/: __init__.py  chat_state.py  messages.py
vet_runs/: claude_1.json
vet_types/: pyproject.toml
vet_types/vet_types/: __init__.py  chat_state.py  ids.py  messages.py
(+95 files in other folders)
