[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vet"
version = "0.1.0"
readme = "README.md"
dependencies = [
    "aiohttp>=3.8.0",
    "click",
    "imbue_core",
    "imbue_tools",
    "jinja2",
    "loguru",
    "pydantic",
    "pygments>=2.0.0",
    "pytest",
    "syrupy",
    "together>=1.5.35",
    "vet_types",
]
requires-python = ">=3.11"

[project.scripts]
vet = "vet.cli.main:main"

[tool.setuptools]
package-data.vet = ["py.typed"]

[tool.setuptools.packages.find]
include = ["vet*"]

[tool.uv.sources]
imbue_core = { path = "./imbue_core", editable = true }
imbue_tools = { path = "./imbue_tools", editable = true }
vet_types = { path = "./vet_types", editable = true }

[dependency-groups]
dev = [
    "black",
]

[tool.black]
line-length = 120
target-version = ['py311']
