[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vet"
version = "0.1.0"
readme = "README.md"
license = "AGPL-3.0-only"
dependencies = [
    # Original vet dependencies
    "jinja2",
    "loguru",
    "pydantic>=2.11.4",
    "pytest",
    "syrupy",

    # From imbue_core
    "anyio",
    "attrs",
    "cachetools",
    "cattrs",
    "diskcache>=5.6.3",
    "httpx",
    "pathspec",
    "pygit2>=1.18.0",
    "pyhumps",
    "tblib==2.0.0",
    "toml",
    "typeid-python",
    "yasoo",
    "anthropic~=0.54",
    "openai>=1.79.0",
    "tiktoken",
    "groq>=0.18.0",
    "google-genai>=1.26.0",

    # From imbue_tools
    "async_lru",
    "libcst",
]
requires-python = ">=3.11"

[project.scripts]
vet = "vet.cli.main:main"

[tool.setuptools]
package-data.vet = ["py.typed"]

[tool.setuptools.packages.find]
include = ["vet*"]

[dependency-groups]
dev = [
    "black",
    "hypothesis",
]

[tool.black]
line-length = 120
target-version = ['py311']
