[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "imbue-tools"
version = "0.1.0"
description = "Utils for imbue-cli tools"
readme = "README.md"
dependencies = [
    "anyio",
    "async_lru",
    "attrs",
    "imbue_core",
    "jinja2",
    "libcst",
    "loguru",
    "psycopg[binary]",
    "pydantic",
    "pydantic-settings",
    "pygit2",
    "pytest",
    "pytest-asyncio",
    "python-gitlab",
    "requests",
    "syrupy",
]
requires-python = ">=3.11"

[project.optional-dependencies]
test = [
    "vet",
]

[tool.setuptools]
package-data.imbue_tools = ["py.typed"]

[tool.setuptools.packages.find]
include = ["imbue_tools*"]

[tool.uv.sources]
imbue_core = { path = "../imbue_core", editable = true }
vet = { path = "..", editable = true }
